Refactor: Update CTF capture plate logic and refactor arena button creation in Capture the Flag gamemode